# megane

./: .gitignore  .pylintrc  Debug.ipynb  Infer.ipynb  README.md  Run.ipynb  TestRun.ipynb  dev.py  draft.py  export-onnx.py  mktrain.py  predict.py  pyproject.toml  requirements.txt  tests.py  train.py  train2.py
configs/: __init__.py  db-text-resnet18.yaml  db_efficientnet_b3.yml  db_mobilenet_v2.yml  db_mobilenet_v3_large.yml  db_mobilenet_v3_large_big.yml  db_mobilenet_v3_large_segment.yml  db_mobilenet_v3_small.yml  db_resnet18.yml  db_resnet34.yml  db_resnet50.yml  db_shufflenet_v2.yml  fpn-bdb-invoice.yaml  train.yaml  training.yml
configs2/: db_mobilenet_v3_large.yml  db_mobilenet_v3_large_big.yml
data/: test.json
eyeball/: aug.py  config.py  loader.py  ops.py  predictor.py  trainer.py
eyeball/models/: backbones.py  detector.py  eyeball.py  heads.py  losses.py
eyeball/processor/: __init__.py  db.py  retina.py
eyeball/tools/: init.py  map.py  remember.py
legacy/configs/: db_efficientnet_b3.yml  db_mobilenet_v2.yml  db_mobilenet_v3_large.yml  db_mobilenet_v3_small.yml  db_resnet18.yml  db_resnet50.yml  db_resnet50_small.yml  db_shufflenet_v2.yml  new_db_shufflenet_v2_x1_5.yml  train.yaml
legacy/megane/: config.py  const.py  loader.py
megane/: __init__.py  augment.py  augments.py  configs.py  data.py  debug.py  loaders.py  losses.py  lr_scheduler.py  meanap.py  ops.py  ops_db.py  predictor.py  processors.py  registry.py  scores.py  stats.py  trainer.py  transforms.py
megane2/: augments.py  configs.py  loaders.py  losses.py  ops.py  predictor.py  scores.py  trainer.py  transforms.py  visualize.py
scripts/: labelme2megane.py  mklmdb.py  segment.sh
src/: __init__.py  __main__.py  configs.py  consts.py  data.py  encode.py  encode_1.py  labelme.py  meanap.py  models.py  net.py  predictor.py  processors.py  trainer.py  utils.py
(+84 files in other folders)
