[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "eyeball"
version="0.2.3"
description = "Text detector with DBNet"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml",
    "numpy",
    "gdown",
    "opencv-python",
    "Pillow",
    "torch",
    "torchvision", 
    "lenses",
	"icecream",
]


[[authors]] 
author = "Hung Nguyen"
email = "ndgnuh@protonmail.com"

[tool.setuptools.package-dir]
eyeball = "eyeball"
"eyeball.config_files" = "configs"
