[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "megane"
version="0.2.4"
description = "Text detector with DBNet (and RetineNet, maybe)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
dependencies = [
    "pyyaml",
    "numpy",
    "gdown",
    "opencv-python",
    "Pillow",
    "torch",
    "torchvision", 
    "lenses",
	"icecream",
]


[[authors]] 
author = "Hung Nguyen"
email = "ndgnuh@protonmail.com"

[tool.setuptools.package-dir]
megane = "megane"
"megane.config_files" = "configs"
